<resources>
    <string name="app_name">SimpleCryptoFolio</string>
    <string name="title_activity_currency">CurrencyActivity</string>
    <string name="title_activity_expenses">ExpensesActivity</string>
    <string name="title_activity_purchase_input">PurchaseInputActivity</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="title_activity_current_value_pie_chart">CurrentValuePieChartActivity</string>

    <string name="hello_blank_fragment">Leere Seite. Irgendetwas ist schief gegangen.</string>

    <string name="load_currency_data">Lade Preisinformationen...</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>


    <!-- valueChart -->
    <string name="load_values_error">An error occurred. Please refresh this tab. </string>


    <!-- AddPurchase -->

    <string name="save">Save</string>
    <string name="currencytag">Currency tag</string>
    <string name="totalvalue">Total value</string>
    <string name="amount">Amount</string>
    <string name="pricepercoin">price per coin</string>
    <string name="date">Date</string>

</resources>
