<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="danielkreiter.simplecryptofolio.UI.Fragments.AddPurchaseFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_currencytype"
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/currencytype_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:ems="10"
                    android:hint="@string/currencytag"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="22dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_amount"
                android:layout_width="299dp"
                android:layout_height="57dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_currencytype">

                <EditText
                    android:id="@+id/amount_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:ems="10"
                    android:hint="@string/amount"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:nextFocusForward="@+id/date_editText"
                    android:paddingLeft="22dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_date"
                android:layout_width="300dp"
                android:layout_height="51dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_amount">

                <EditText
                    android:id="@+id/date_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/date"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:paddingLeft="23dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_value"
                android:layout_width="214dp"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_date">

                <EditText
                    android:id="@+id/value_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/totalvalue"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"

                    android:paddingLeft="22dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pricepercoin"
                android:layout_width="349dp"
                android:layout_height="54dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_value">

                <EditText
                    android:id="@+id/pricepercoin_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/pricepercoin"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:paddingLeft="22dp" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/loadCurrencyData_ProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="33dp"
                android:layout_height="26dp"
                android:layout_marginLeft="176dp"
                android:layout_marginStart="176dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/input_layout_currencytype"
                app:layout_constraintTop_toTopOf="@+id/input_layout_currencytype" />

            <ImageButton
                android:id="@+id/loadCurrencyData_button"
                android:layout_width="39dp"
                android:layout_height="32dp"
                android:layout_marginLeft="172dp"
                android:layout_marginStart="172dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:onClick="onClick"
                android:src="@android:drawable/ic_menu_search"
                app:layout_constraintStart_toStartOf="@+id/input_layout_currencytype"
                app:layout_constraintTop_toTopOf="@+id/input_layout_currencytype"
                tools:ignore="OnClick" />


            <TextView
                android:id="@+id/coindata_textview"
                android:layout_width="209dp"
                android:layout_height="20dp"
                android:layout_marginLeft="208dp"
                android:layout_marginStart="208dp"
                android:layout_marginTop="24dp"
                android:text=""
                app:layout_constraintStart_toStartOf="@+id/input_layout_currencytype"
                app:layout_constraintTop_toTopOf="@+id/input_layout_currencytype" />

            <Button
                android:id="@+id/safe_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="228dp"

                android:layout_height="53dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_pricepercoin" />

            <ImageView
                android:id="@+id/money"
                android:layout_width="21dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_code_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/amount"
                android:layout_width="19dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:src="@drawable/ic_add_shopping_cart_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/money" />

            <ImageView
                android:id="@+id/totalvalue"
                android:layout_width="19dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/ic_attach_money_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <ImageView
                android:id="@+id/percoin"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/ic_account_balance_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalvalue" />

            <ImageView
                android:id="@+id/date"
                android:layout_width="17dp"
                android:layout_height="16dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="44dp"
                android:src="@drawable/ic_date_range_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>

